# hk-bus-crawling

./: .gitignore  .pre-commit-config.yaml  0versions.json  CNAME  README.md  exits.mtr.json  gtfsOperatorsStopsMap.json  gtfs_operators_stops_map.json  holidays.json  integrated_routes.json  nearby_operators_stops.json  operators_routes.json  operators_stops.json  pyproject.toml  routeFareList.alpha.md5  routeFareList.md5  run_crawling.bat  run_crawling.sh  service_days.json  setup.py
alpha/: 0versions.json  exits.mtr.json  gtfs_operators_stops_map.json  integrated_routes.json  nearby_operators_stops.json  operators_routes.json  operators_stops.json  routeFareList.alpha.md5  routeFareList.md5
crawling/: README.md  cleansing.py  constants.py  crawl_utils.py  ctb.py  ctb_crawl.py  event_special_bus_routes.json  fortuneferry.py  gmb.py  gmb_crawl.py  gtfs_fare.py  hkkf.py  kmb.py  kmb_crawl.py  lightRail.py  lrtfeeder.py  matchGtfs.py  mergeRoutes.py  mergeStopList.py  mtr.py  mtrExits.py  nlb.py  nlb_crawl.py  parseGtfs.py  parseGtfsEn.py  parseHoliday.py  parseJourneyTime.py  requirements.txt  routeCompare.py  route_fare_key.py  schemas.py  sunferry.py  test.py  utils.py
hk_bus_eta/: eta.py
route-ts/: +1+CENTRAL ／ WAN CHAI+TSIM SHA TSUI EAST  1+1+TAI O+MUI WO FERRY PIER  101X+1+KENNEDY TOWN+KWUN TONG (YUE MAN SQUARE)  102P+1+SHAU KEI WAN+MEI FOO  106+1+PO LAM+KOWLOON BAY  11+1+KOWLOON STATION+DIAMOND HILL STATION  110+3+SHAU KEI WAN BUS TERMINUS+TSIM SHA TSUI EAST (MODY ROAD) (YT926)  12B+2+METRO HARBOUR VIEW+ SAI YEUNG CHOI STREET SOUTH  13X+2+TSIM SHA TSUI EAST+PO TAT  269D+4+TIN FU+LEK YUEN  (+100 more)
(+107 files in other folders)
