[project]
name = "hk-bus-crawling"
version = "2.1.5"
description = "Query the ETA (Estimated Time of Arrival) of HK Bus/Minibus/MTR/Lightrail"
authors = [
    {name = "Chun Law (chunalw)",email = "chunlaw@rocketmail.com.com"}
]
license = {text = "GPL-2.0"}
readme = "README.md"
requires-python = ">=3.14, <3.15"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pyproj (>=3.7.2,<4.0.0)",
    "haversine (>=2.9.0,<3.0.0)",
    "xxhash (>=3.7.0,<4.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
